--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ h1{
     font-size: 30px;
     font-family:'Courier New', Courier, monospace ;
     text-align: center;
+    display: inline-block;
+    
 }
 h2{
     background: blue;
@@ -11,12 +13,14 @@ h2{
     font-size: 25px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+    display: inline-block;
 }
 img{
     width: 700px;
     height: 400px;
     border: cornflowerblue;
     border: 5px;
+    display: inline-block;
 }
 h3{
     color: darkturquoise;
@@ -24,4 +28,5 @@ h3{
     font-size: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
+    display: inline-block;
 }
